# webgpu-race

./: .gitignore  .gitmodules  Cargo.toml  README.md  Rocket.toml  package.json  run.sh  webgpurace.service
app/: analyze_results.js  get_gpu.js  page.module.css  page.tsx  shader.js
frontend/: .env.development  .env.production  next.config.js  package-lock.json  package.json  tsconfig.json
frontend/app/: .page.tsx.swp  analyze_results.js  get_gpu.js  layout.tsx  page.tsx  shader.js
src/: main.rs
